bases/olympus/boreas/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boreas-api
  namespace: default
  labels:
    app: boreas
    component: api
spec:
  selector:
    matchLabels:
      app: boreas
      component: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: boreas
        component: api
        azure.workload.identity/use: "true"
      annotations:
        linkerd.io/inject: enabled
        kubectl.kubernetes.io/default-container: app
        prometheus.io/port: "6502"
        prometheus.io/scrape: "true"
        prometheus.io/job: "boreas"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - boreas
                topologyKey: topology.kubernetes.io/zone
      containers:
        - image: binkcore.azurecr.io/boreas:latest
          securityContext:
            runAsGroup: 65534
            runAsUser: 65534
          imagePullPolicy: Always
          name: app
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 256Mi
      serviceAccountName: boreas
