bases/olympus/boreas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: boreas
  name: boreas-api
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 6502
  selector:
    app: boreas
  sessionAffinity: None
  type: ClusterIP
